# compilers

Llvm/: hello.bc  out.bc  runtime.bc  runtime.s  t2.bc
lab_02/: Fib.java  FibR-ref.j  FibR.j  Inc.j  Inc.java  README.md
lab_03/: README.md  foo  foo.bc  foo.ll  foo.s  out.bc  out.s
lab_04/: README.md
zad_01/: README.md
zad_01/myCompiler/: CompileLLVM.hs  InterpretInstant.hs  InterpreterInstant.hs  LLVMInstant.hs  Makefile  README.md  tk359746.tar
zad_01/myCompiler/examples/: test06.bc  test06.ll
zad_01/myCompiler/lib/: runtime.ll
zad_01/myCompiler/src/: CompileJVM.hs  CompileLLVM.hs  JVMInstant.hs  LLVMInstant.hs  Makefile  insc_llvm.cabal  instant.cabal
zad_02/: Makefile  README.md  latc_x86_64  prepare_archive.sh  test.sh  tk359746.tgz
zad_02/lattests/good/: core001.s  core002.s  core003.s  core004.s  core005.s  core006.s  core007.s  core008.s  core009.s  core010.s  core011.s  core012.s  core013.s  core014.s  core015.s  core016.s  core017.s  core018.s  core019.s  core020.s  core021.s  core022.s
zad_02/lib/: builtins.s
zad_02/lib_src/: Makefile  builtins.c  builtins.s  runtime.c
zad_02/mytests/bad/: duplicate_functions.lat  lt_bool.lat  minus_string.lat  scoping_if.lat  scoping_if_else.lat  scoping_while.lat  void_param.lat  void_var.lat  wrong_main.lat
zad_02/mytests/good/: add_int.lat  add_int.output  add_int.s  ifac.lat  ifac.s  input_int.lat  input_int.output  input_int.s  input_string.lat  input_string.output  input_string.s  mem2mem.lat  mem2mem.s  permutation.lat  permutation.s  process_swaps.lat  process_swaps.s  reverse.input  reverse.lat  reverse.output  reverse.s  simple_if.lat  simple_if.s  stack.lat  stack.s  stack_params.lat  stack_params.output  stack_params.s  string.lat  string.s  (+9 more)
zad_02/simple_c/: Makefile  ex.c  ex.s
zad_02/src/: AsmLatte.hs  CFG.hs  CGDef.hs  CGState.hs  CodeGen.hs  CompState.hs  Compiler.hs  GenState.hs  Generator.hs  IG.hs  IRDef.hs  IRGen.hs  IRGenState.hs  Latte.cabal  LexLatte.hs  Live.hs  Makefile  ParLatte.hs  PeepHole.hs  PreState.hs  Preprocessor.hs  README.md  SSA.hs  TestLatte
