Name: instantLLVM
Version: 0.1.0
Author:		Tomasz Kępa
Build-Type:	Simple
Cabal-Version:  >=1.10

executable insc_llvm
  build-depends:      base >= 4, mtl, array, containers
  other-modules:      AbsInstant, ErrM, LexInstant, LLVMInstant, ParInstant  
  default-language:   Haskell2010  
  main-is:            CompileLLVM.hs
